<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/background_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="74dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="70dp"
            tools:srcCompat="@drawable/oparkclean"
            />

        <EditText
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_box"
            android:drawableStart="@drawable/ic_mail"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp" />

        <EditText
            android:id="@+id/text_pass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_box"
            android:drawableStart="@drawable/ic_lock"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:padding="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit_login"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_view"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:shadowColor="#FDFDFD"
            android:text="@string/kirjaudu"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:rippleColor="#C30A0A" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="42dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="20dp" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@android:color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/createAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/accountcreate"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>